--- a/style.css
+++ b/style.css
@@ -2,17 +2,24 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    -webkit-font-smoothing: antialised;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body{
     background-color: #0F0D13;
 }
 
-
-#app *{
-    border: 1px solid lightgray;
+body *{
+    font-family: 'Roboto', sans-serif;
 }
 
+/*
+#app {
+    border: 1px solid lightgray;
+    
+}
+*/
 #app{
     display: grid;
     grid-template-areas: 
@@ -20,16 +27,43 @@ body{
     'A C';
 
     gap: 32px;
+    grid-template-columns: max-content max-content;
+    place-content: center;
+    height: 100vh;
 }
 
+/*Player 1*/
 #player-1{
     grid-area: A;
     padding: 50px 38px;
 }
 
+#player-1 .wrapper{
+    width: 190px;
+}
+
+#player-1 img{
+    width: 190px;
+    height: 190px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+#player-1 .info{
+    margin-top: 28px;
+}
+
+
+
+/*Player 2*/
 #player-2{
     grid-area: B;
+    height: fit-content;
 }
+
+
+
+/*Player 3*/
 
 #player-3{
     grid-area: C;
@@ -38,4 +72,94 @@ body{
 .player{
     background-color: #2A2143;
     padding: 28px;
+    border-radius: 10px;
+}
+
+.player img{
+    width: 84px;
+    height: 84px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.info-wrapper{
+    display: flex;
+    align-items: center;
+    gap: 28px
+}
+
+.info{
+    color: #E1E1E6;
+
+}
+
+.info h1{
+    margin-bottom: 9.6px;
+    font-size: 24px;
+    color: #E1E1E6;
+}
+
+.info p{
+    opacity: .67;
+    font-size: 19px;
+}
+
+.controls{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 28px;
+}
+.horizontal .controls{
+    padding-inline: 58px;
+}
+
+
+.track{
+    position: relative;
+    margin-top: 28px;
+}
+
+.track::before{
+    display: block;
+    content: '';
+    height: 6px;
+    width: 100%;
+    background: #D9D9D9;
+    opacity: 0.3;
+    border-radius: 10px;
+    position: absolute;
+}
+
+.track::after{
+    display: block;
+    content: '';
+    height: 6px;
+    width: 80%;
+    background: #D9D9D9;
+    border-radius: 10px;
+}
+
+.time{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    color: #C4C4CC;
+    opacity: 0.7;
+    margin-top: 9.6px;
+}
+
+@media (max-width: 670px){
+    #app{
+        display: flex;
+        flex-direction: column;
+        max-width: 270px;
+        margin: auto;
+
+        height: auto;
+        padding-block: 60px;
+    }
+
+    .horizontal .controls{
+        padding-inline: 30px;
+    }
 }
